--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,15 @@
     "@emailjs/browser": "^3.10.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@heroicons/react": "^2.1.5",
+    "@material-tailwind/react": "^2.1.9",
     "@react-map/india": "^1.0.17",
     "aos": "^2.3.4",
     "aos-animations": "^0.0.7",
     "axios": "^1.3.2",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "lucide-react": "^0.418.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
