--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,56 @@ dist/
 coverage/
 .nyc_output/
 coverage-final.json
+
+# Node.js specific
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+logs/
+*.log
+logs/**/*.log
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Optional npm cache directory
+.npm/
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# VS Code settings
+.vscode/
+
+# Build directories
+dist/
+build/
+
+# Optional coverage directory
+coverage/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Next.js specific
+.next/
+out/
+
