--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "lucide-react": "^0.418.0",
+    "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-datamaps-india": "^0.6.0",
@@ -30,6 +31,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-image-processing": "^0.0.1-beta.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.8.1",
     "typewriter-effect": "^2.19.0"
   },
